--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -1615,7 +1615,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subcategory 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHv-ng-4eW">
-                                                                <rect key="frame" x="55" y="32.5" width="178.5" height="31.5"/>
+                                                                <rect key="frame" x="55" y="33" width="178.5" height="31.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -1657,7 +1657,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subcategory 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyJ-MJ-qqY">
-                                                                <rect key="frame" x="55" y="31" width="179" height="31.5"/>
+                                                                <rect key="frame" x="55" y="31.5" width="179" height="31.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -2350,6 +2350,9 @@
                                         <integer key="value" value="22"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="saveChangesButtonTouched:" destination="c7i-6e-3on" eventType="touchUpInside" id="iMl-1D-3WO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2378,6 +2381,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="hLv-NR-ZIR"/>
                     <connections>
+                        <outlet property="confirmPasswordTextField" destination="NBZ-iC-Qod" id="bpt-HU-oVo"/>
                         <outlet property="confirmPasswordTextFieldContainer" destination="31j-Ss-mxH" id="o0O-MD-OjB"/>
                         <outlet property="passwordTextField" destination="oap-se-2Sw" id="BOp-f5-XFt"/>
                         <outlet property="passwordTextFieldContainer" destination="AKH-tj-jJf" id="6gk-jH-nBE"/>
